--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -27,6 +27,15 @@
   text-align: center;
 }
 
+.entrance {
+  text-align: left;
+}
+.entrance .weui-cells{
+  margin-bottom: 1.1764705882em;
+}
+.index-state {
+  text-align: left;
+}
 .weui-vcode-count-down {
   -webkit-tap-highlight-color: transparent;
   display: none;
