--- a/app/styles/weui/base/mixin/_setOnepx.scss
+++ b/app/styles/weui/base/mixin/_setOnepx.scss
@@ -1,27 +1,27 @@
 ﻿@mixin setTopLine($c:#C7C7C7) {
-    content: " ";
-    position: absolute;
-    left: 0;
-    top: 0;
-    right: 0;
-    height: 1px;
-    border-top: 1px solid $c;
-    color: $c;
-    transform-origin: 0 0;
-    transform: scaleY(0.5);
+    // content: " ";
+    // position: absolute;
+    // left: 0;
+    // top: 0;
+    // right: 0;
+    // height: 1px;
+    // border-top: 1px solid $c;
+    // color: $c;
+    // transform-origin: 0 0;
+    // transform: scaleY(0.5);
 }
 
 @mixin setBottomLine($c:#C7C7C7) {
-    content: " ";
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    height: 1px;
-    border-bottom: 1px solid $c;
-    color: $c;
-    transform-origin: 0 100%;
-    transform: scaleY(0.5);
+    // content: " ";
+    // position: absolute;
+    // left: 0;
+    // bottom: 0;
+    // right: 0;
+    // height: 1px;
+    // border-bottom: 1px solid $c;
+    // color: $c;
+    // transform-origin: 0 100%;
+    // transform: scaleY(0.5);
 }
 
 @mixin setLeftLine($c:#C7C7C7) {
