--- a/app/styles/index_page.scss
+++ b/app/styles/index_page.scss
@@ -24,14 +24,15 @@ $border_radius: 12px;
   }
   
   .tips-word {
-    margin-bottom: 15px;
+    margin-bottom: 10px;
     .title {
       color: #ef3e42;
       font-weight: bold;
     }
     h3 {
-      font-weight: bold;
+      font-weight: 400;
       line-height: 1.8;
+      margin-bottom: 0;
     }
   }
   
@@ -49,6 +50,8 @@ $border_radius: 12px;
         padding: .8em;
     
         .img-box {
+          width: 100px;
+          margin: 0 auto;
           position: relative;
           .type-img {
             display: block;
@@ -61,8 +64,8 @@ $border_radius: 12px;
             width: 2.2em;
             height: 2.2em;
             position: absolute;
-            right: 20px;
-            top: 0;
+            right: -6px;
+            top: 4px;
           } 
         }
         p {
