--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -6,7 +6,7 @@ $border_radius: 12px;
 $input_border_color: #fca41d;
 
 html, body {
-  height: 100%;
+  // height: 100%;
   line-height: 1.6;
   box-sizing: border-box;
   font-family: -apple-system-font, "Helvetica Neue", sans-serif;
